--- a/DataStructures/DataStructWinProj/DataStructWinProj.vcxproj
+++ b/DataStructures/DataStructWinProj/DataStructWinProj.vcxproj
@@ -111,8 +111,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Hackerrank\trie_contacts.cpp" />
     <ClCompile Include="..\main.cpp" />
     <ClCompile Include="..\trie.cpp" />
+    <ClCompile Include="LinkListSingle.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
