--- a/DataStructures/DataStructWinProj/DataStructWinProj.vcxproj.filters
+++ b/DataStructures/DataStructWinProj/DataStructWinProj.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Hackerrank">
+      <UniqueIdentifier>{0dfd127f-b702-40d6-a4c6-7a983f35520d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\main.cpp">
@@ -20,6 +23,12 @@
     </ClCompile>
     <ClCompile Include="..\trie.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LinkListSingle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Hackerrank\trie_contacts.cpp">
+      <Filter>Hackerrank</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
